force-app/src/objects/cpm__Transaction_Set__c.object
<CustomObject>
    <description>The transaction set represents a set of bank transactions. Usually imported using a CAMT file</description>
    <fields>
        <fullName>cpm__BIC_Code__c</fullName>
        <label>BIC Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Closing_Balance_Date__c</fullName>
        <label>Closing Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Closing_Balance__c</fullName>
        <description>The bank account balance on the last date of this mutation set.</description>
        <inlineHelpText>The bank account balance on the last date of this mutation set.</inlineHelpText>
        <label>Closing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__Default_Payment_Method__c</fullName>
        <label>Default Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Default_Payment_Processor__c</fullName>
        <label>Default Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Default_Target__c</fullName>
        <label>Default Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>none</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Electronic_Sequence_Number__c</fullName>
        <description>A bank provided sequence number.</description>
        <inlineHelpText>A bank provided sequence number.</inlineHelpText>
        <label>Batch Identification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Filename__c</fullName>
        <description>The filename of the processed file</description>
        <inlineHelpText>The filename of the processed file</inlineHelpText>
        <label>Filename</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Filesize__c</fullName>
        <description>populated by code</description>
        <inlineHelpText>Filesize in kb. Used to validate the input</inlineHelpText>
        <label>Filesize</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Filetype__c</fullName>
        <label>Filetype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__From_Date__c</fullName>
        <description>The starting date for this CAMT.</description>
        <inlineHelpText>The starting date for this CAMT.</inlineHelpText>
        <label>From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpm__Guided_Matching_Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guided Matching Setup</label>
        <referenceTo>cpm__Guided_Matching_Setup__c</referenceTo>
        <relationshipLabel>Transaction Sets</relationshipLabel>
        <relationshipName>Transaction_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__IBAN__c</fullName>
        <description>The bankaccount this CAMT represents.</description>
        <inlineHelpText>The bankaccount this CAMT represents.</inlineHelpText>
        <label>Bank Account Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Status_Reason__c</fullName>
        <label>Last Status Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Nr_Of_Completed__c</fullName>
        <formula>cpm__Nr_Of_Matched__c + cpm__Nr_Of_Ignored__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Of Completed Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Nr_Of_Failed__c</fullName>
        <label># Of Failed Transactions</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Nr_Of_Guided_Review__c</fullName>
        <label># Of Transactions In Guided Review</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Nr_Of_Ignored__c</fullName>
        <label># Of Ignored Transactions</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Nr_Of_Matched__c</fullName>
        <label># Of Matched Transactions</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Nr_Of_New__c</fullName>
        <label># Of New Transactions</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Nr_Of_No_Match__c</fullName>
        <label># Of No Match Transactions</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Nr_Of_Other__c</fullName>
        <label># Of Transactions With Other Status</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Nr_Of_Processing__c</fullName>
        <label># Transactions In Processing</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Number_Of_Credit_Entries_from_file__c</fullName>
        <description>The number of transactions that increased the balance. (incoming money)</description>
        <inlineHelpText>The number of transactions that increased the balance. (incoming money)</inlineHelpText>
        <label>Number Of Credit Entries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Number_Of_Debit_Entries_from_file__c</fullName>
        <description>The number of transactions that decreased the balance. (outgoing money)</description>
        <inlineHelpText>The number of transactions that decreased the balance. (outgoing money)</inlineHelpText>
        <label>Number Of Debit Entries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Opening_Balance_Date__c</fullName>
        <label>Opening Balance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Opening_Balance__c</fullName>
        <description>The bank account balance at the start of this CAMT file.</description>
        <inlineHelpText>The bank account balance at the start of this CAMT file.</inlineHelpText>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__ProcessingHub_Id__c</fullName>
        <description>The Id as the Transaction set is known on the processing Hub.</description>
        <label>ProcessingHub Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <description>The current status of the CAMT import.</description>
        <inlineHelpText>The current status of the CAMT import.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Restart</fullName>
                </value>
                <value>
                    <fullName>Start Matching</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__To_Date__c</fullName>
        <description>The enddate of this CAMT.</description>
        <inlineHelpText>The enddate of this CAMT.</inlineHelpText>
        <label>To Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpm__Total_Amount_Credit_from_file__c</fullName>
        <description>The total amount of the transactions that increased the balance. (incoming money)</description>
        <inlineHelpText>The total amount of the transactions that increased the balance. (incoming money)</inlineHelpText>
        <label>Total Amount Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__Total_Amount_Debit_from_file__c</fullName>
        <description>The total amount of the transactions that decreased the balance. (outgoing money)</description>
        <inlineHelpText>The total amount of the transactions that decreased the balance. (outgoing money)</inlineHelpText>
        <label>Total Amount Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Transaction Set</label>
    <listViews>
        <fullName>cpm__All</fullName>
        <columns>NAME</columns>
        <columns>cpm__Opening_Balance__c</columns>
        <columns>cpm__Closing_Balance__c</columns>
        <columns>cpm__IBAN__c</columns>
        <columns>cpm__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
    </listViews>
    <listViews>
        <fullName>cpm__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{0}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>